# DVN-Assignment-2

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: DVN_AssesmentTask2.ipynb
